Minor SonarQube fixes, round 1